--- a/Project_personal/stage 01/report/bib/cite.bib
+++ b/Project_personal/stage 01/report/bib/cite.bib
@@ -1,15 +1,24 @@
-@book{tanenbaum_book_modern-os_ru,
-  timestamp = {2023-01-03 15:31:42 (MSK)},
-  Abstract = {Эндрю Таненбаум представляет новое издание своего всемирного бестселлера, необходимое для понимания функционирования современных операционных систем. Оно существенно отличается от предыдущего и включает в себя сведения о последних достижениях в области информационных технологий. Например, глава о Windows Vista теперь заменена подробным рассмотрением Windows 8.1 как самой актуальной версии на момент написания книги. Появился объемный раздел, посвященный операционной системе Android. Был обновлен материал, касающийся Unix и Linux, а также RAID-систем. Гораздо больше внимания уделено мультиядерным и многоядерным системам, важность которых в последние несколько лет постоянно возрастает. Появилась совершенно новая глава о виртуализации и облачных вычислениях. Добавился большой объем нового материала об использовании ошибок кода, о вредоносных программах и соответствующих мерах защиты. В книге в ясной и увлекательной форме приводится множество важных подробностей, которых нет ни в одном другом издании.},
-  Address = {СПб.},
-  Author = {Таненбаум, Эндрю and Бос, Х.},
-  Edition = {4-е изд.},
-  langid = {russian},
-  PageTotal = {1120},
-  Publisher = {Питер},
-  Series = {Классика Computer Science},
-  Title = {Современные операционные системы},
-  Year = {2015},
+@book{KaliLinux,
+  language = {russian},
+  timestamp = {2024-09-09},
+  Abstract = {4-е издание Kali Linux 2018: Assuring Security by Penetration Testing предназначено для этических
+хакеров, пентестеров и специалистов по IT-безопасности. От читателя требуются базовые знания
+операционных систем Windows и Linux. Знания из области информационной безопасности будут
+плюсом и помогут вам лучше понять изложенный в книге материал.},
+  Author = {Парасрам Шива, Замм Алекс, Хериянто Теди, Али Шакил, Буду Дамиан, Йохансен Джерард, Аллен Ли},
+  ISBN = {978-5-4461-1252-4},
+  PageTotal = {448},
+  Publisher = {СПб},
+  Title = {Kali Linux. Тестирование на проникновение и безопасность.},
+  Year = {2020},
+}
+
+@misc{skillbox.ru,
+  author       = "Мария Толчёнова",
+  title        = "Kali Linux: обзор дистрибутива для будущих хакеров",
+  month        = "July",
+  year         = "2024",
+  url={https://skillbox.ru/media/code/kali-linux-obzor-distributiva-dlya-budushchikh-khakerov/}, 
 }
 
 @book{robbins_book_bash_en,
